# taricrypto_ffi

./: Cargo.toml  README.md  build.rs
src/: keys.rs  lib.rs
