[package]
name = "tari_crypto_ffi"
description = "Tari Cryptography library"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
categories = ["cryptography"]
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.17.0"
edition = "2018"

[dependencies]
tari_crypto = { git = "https://github.com/swvheerden/tari-crypto.git",  rev = "bd451c1d79a42510c38f73e24c6b24f88b5117ba" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git",  rev = "c06726322683c4671b93388b444d108103cd7b55", default-features = false, features = ["zero"] }
blake2 = { version = "0.10", default-features = false  }
borsh = { version = "0.10" , optional = true , default-features = false}
bulletproofs_plus = { package = "tari_bulletproofs_plus", git = "https://github.com/tari-project/bulletproofs-plus", rev = "b4756b05edfc2cc0f9b0240ca34a22bd9730fbd1", optional = true}
curve25519-dalek = { package = "tari-curve25519-dalek",  version = "4.0.3", default-features = false, features = [ "alloc", "rand_core", "precomputed-tables", "zeroize"] }
digest = { version = "0.10", default-features = false }
getrandom = { version = "0.2" , optional = true}
log = { version = "0.4" , default-features = false}
once_cell = { version = "1.8", default-features = false, features = ["critical-section"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6" , default-features = false}
serde = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
sha3 = { version = "0.10", default-features = false  }
snafu = { version = "0.7", default-features = false}
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"], optional = true }
zeroize = {version = "1" , default-features = false}

[dev-dependencies]
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git",  rev = "c06726322683c4671b93388b444d108103cd7b55", features = ["std"] }
serde = { version = "1.0"}
bincode = { version = "1.1" }
criterion = { version = "0.5", default-features = false }
sha2 = { version = "0.10" }
wasm-bindgen-test = { version = "0.3" }
rand = { version = "0.8" }

[build-dependencies]
cbindgen = {version = "0.24" }


[lib]
# Disable benchmarks to allow Criterion to take over
bench = false
crate-type = ["lib", "cdylib"]

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[package.metadata.cargo-machete]
ignored = ["getrandom"]